
* RubyRange not requires Comparable objects to initialize anymore

* Moved newRubyArray(), newRubyHash(), newRubyEnumerable(), newRubyRnumerator(), newRubyRange() to RubyCollections

- Removed U(), X(), Ⴖ(), ㄍ(), ㄧ(), 十() from RubyArray

* Made RubyEnumerable an abstract class

* Changed constructors of RubyArray & RubyHash to public

* Changed foreach() of RubyIO to accept only a block


Version 1.3.1

* Fixed the bugs when max(), maxBy(), min(), minBy(), minmax(), minmaxBy() of RubyEnumerable are called on an empty Iterable

* Added date() to RubyCollections


Version 1.4.0

- Removed google guava dependency

+ Implemented RubyArray#pack()

+ Added RubyFile::join

* Added return value to RubyKernel::p


Version 1.4.1

* Fixed CycleIterator#hasNext bug

* Fixed EachLineIterator#next bug

* Changed UnsupportedOperationException to IllegalStateException in RubyIO

* Changed NoSuchElementException to IllegalArgumentException in RubyIO

* Overrode toString() methods of all Iterables

* Made RubyArray#push accept varargs

* Fixed the bug of RubyArray#delete which happens while deleting null objects

* Fixed the bugs of RubyArray#assoc & RubyArray#rassoc while encountering null objects

* Fixed the bugs of RubyHash#rassoc & RubyHash#key while encountering null objects

* Fixed the bug of RubyEnumerable#sortBy ordering

* Increased acceptable comparators of RubyEnumerable#sort & RubyEnumerable#sortBy

* Increased acceptable comparators of RubyArray#sortByǃ

* Changed RubyHash entries to ComparableEntry

* Fixed the bug of RubyFile#join

* Made RubyArray Comparable


Version 1.4.2

* Changed all returned ComparableEntry to Entry

* Changed all Iterable<ComparableEntry<K, V>> to Iterable<Entry<K, V>> 

* Changed all Iterator<ComparableEntry<K, V>> to Iterator<Entry<K, V>> 


Version 1.5.0

+ Implemented RubyEnumerable#lazy

+ Added freeze() & frozen?() to RubyArray & RubyHash

* Checked 'false' in RubyEnumerable#all? & RubyEnumerable#any?